# qlipper

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  README  main.cpp  make_release.sh  qlipper.desktop  qlipper.qrc  qlipper2.pro  qlipperitem.cpp  qlipperitem.h  qlippermodel.cpp  qlippermodel.h  qlipperpreferences.cpp  qlipperpreferences.h  qlipperpreferencesdialog.cpp  qlipperpreferencesdialog.h  qlipperpreferencesdialog.ui  qlippersystray.cpp  qlippersystray.h
.github/workflows/: windows-build.yml
autostart/: lxqt-qlipper-autostart.desktop.in
autostart/translations/: lxqt-qlipper-autostart_ar.desktop  lxqt-qlipper-autostart_cs.desktop  lxqt-qlipper-autostart_cs_CZ.desktop  lxqt-qlipper-autostart_da.desktop  lxqt-qlipper-autostart_da_DK.desktop  lxqt-qlipper-autostart_de_DE.desktop  lxqt-qlipper-autostart_el_GR.desktop  lxqt-qlipper-autostart_eo.desktop  lxqt-qlipper-autostart_es.desktop  lxqt-qlipper-autostart_es_VE.desktop  lxqt-qlipper-autostart_eu.desktop  lxqt-qlipper-autostart_fi.desktop  lxqt-qlipper-autostart_fr_FR.desktop  lxqt-qlipper-autostart_id_ID.desktop  lxqt-qlipper-autostart_it_IT.desktop  lxqt-qlipper-autostart_ja.desktop  lxqt-qlipper-autostart_lt.desktop  lxqt-qlipper-autostart_nl.desktop  lxqt-qlipper-autostart_pl_PL.desktop  lxqt-qlipper-autostart_pt.desktop  lxqt-qlipper-autostart_pt_BR.desktop  lxqt-qlipper-autostart_ro_RO.desktop  lxqt-qlipper-autostart_ru.desktop  lxqt-qlipper-autostart_ru_RU.desktop  lxqt-qlipper-autostart_sl.desktop  lxqt-qlipper-autostart_sr.desktop  lxqt-qlipper-autostart_sr@latin.desktop  lxqt-qlipper-autostart_th_TH.desktop  lxqt-qlipper-autostart_tr.desktop  lxqt-qlipper-autostart_uk.desktop  lxqt-qlipper-autostart_zh_CN.GB2312.desktop  lxqt-qlipper-autostart_zh_CN.desktop  lxqt-qlipper-autostart_zh_TW.desktop
cmake/: FindQtSingleApplication.cmake  FindQxt.cmake
lxqt-autostart/: CMakeLists.txt
lxqt-autostart/translations/: lxqt-qlipper-autostart_ar.desktop  lxqt-qlipper-autostart_ca.desktop  lxqt-qlipper-autostart_de.desktop  lxqt-qlipper-autostart_el.desktop  lxqt-qlipper-autostart_es.desktop  lxqt-qlipper-autostart_es_VE.desktop  lxqt-qlipper-autostart_fi.desktop  lxqt-qlipper-autostart_fr.desktop  lxqt-qlipper-autostart_it_IT.desktop  lxqt-qlipper-autostart_ja.desktop  lxqt-qlipper-autostart_lt.desktop  lxqt-qlipper-autostart_pl_PL.desktop  lxqt-qlipper-autostart_pt.desktop  lxqt-qlipper-autostart_pt_BR.desktop  lxqt-qlipper-autostart_ru_RU.desktop  lxqt-qlipper-autostart_sl.desktop  lxqt-qlipper-autostart_sr.desktop  lxqt-qlipper-autostart_sv.desktop  lxqt-qlipper-autostart_th_TH.desktop  lxqt-qlipper-autostart_zh_TW.desktop
macosx/: Info.plist  Info.plist.in  qlipper.icns
qkeysequencewidget/: LICENSE  qkeysequencewidget.cpp  qkeysequencewidget.h  qkeysequencewidget_p.h
qmenuview/: qmenuview.cpp  qmenuview.h  qmenuview_p.h
qtsingleapplication/: LICENSE
qxt/: qxtglobalshortcut.cpp  qxtglobalshortcut.h  qxtglobalshortcut_mac.cpp  qxtglobalshortcut_p.h  qxtglobalshortcut_win.cpp  qxtglobalshortcut_x11.cpp
src/: clipboardwrap.cpp  clipboardwrap.h  config.h  main.cpp  qlipper.qrc  qlipperitem.cpp  qlipperitem.h  qlippermenuview.cpp  qlippermenuview.h  qlippermodel.cpp  qlippermodel.h  qlippernetwork.cpp  qlippernetwork.h  qlipperpreferences.cpp  qlipperpreferences.h  qlipperpreferencesdialog.cpp  qlipperpreferencesdialog.h  qlipperpreferencesdialog.ui  qlippersystray.cpp  qlippersystray.h  qlippertypes.h  signalhandler.cpp  signalhandler.h
src/icons/: qlipper.rc
ts/: qlipper.cs.qm  qlipper.cs.ts  qlipper.sr.qm  qlipper.sr.ts  qlipper_ar.ts  qlipper_bg.ts  qlipper_ca.ts  qlipper_cs.ts  qlipper_da.ts  qlipper_de.ts  qlipper_el.ts  qlipper_en_GB.ts  qlipper_es.ts  qlipper_et.ts  qlipper_fa.ts  qlipper_fi.ts  qlipper_fr.ts  qlipper_he.ts  qlipper_hi.ts  qlipper_hr.ts  qlipper_hu.ts  qlipper_is.ts  qlipper_it.ts  qlipper_ja.ts  qlipper_ka.ts  qlipper_kab.ts  qlipper_kk.ts  qlipper_ko.ts  qlipper_lt.ts  qlipper_nb_NO.ts  qlipper_nl.ts  qlipper_oc.ts  qlipper_pa.ts  qlipper_pl.ts  qlipper_pt.ts  qlipper_pt_BR.ts  qlipper_pt_PT.ts  qlipper_ru.ts  qlipper_si.ts  qlipper_sk.ts  (+6 more)
